@@ -15,3 +15,4 @@ depth: 1
 
  * Ensure string representation of `FormSubmission` returns a string (LB (Ben Johnston))
  * Fix `updatemodulepaths` command for Python 3.7 (Matt Westcott)
+ * Fix issue where comments could not be added in StreamField that were already already saved (Jacob Topp-Mugglestone)
